Updates to resolve respondent representative removal bugs.